--- a/app/views/common/header.twig
+++ b/app/views/common/header.twig
@@ -4,15 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>{{ title|default('Welcome') }}</title>
+	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+	<title>{% block title %}Welcome{% endblock %}</title>
 </head>
 <body>
-
-{% block body %}
-
-<h1>Welcome</h1>
-
-{% endblock %}
-
-</body>
-</html>
